2011-01-22  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterInputDevice.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/input-device.[hg|ccg]: Initial wrapping of ClutterInputDevice.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
	* codegen/m4/convert_clutter.m4: Added enum conversion for Stage and
	InputDeviceType.

2011-01-21  Chris Kühl  <chrisk@openismus.com>

	Sorted _EQUAL & _CONV_ENUM entries.

	* codegen/m4/convert_clutter.m4:

2011-01-21  Chris Kühl  <chrisk@openismus.com>

	Initial wrapping of ClutterAnimator.

	* clutter/cluttermm.h: Added header file for new class.
	* clutter/src/animator.[hg|ccg]: Initial wrapping of ClutterAnimator.
	* clutter/src/clutter_signals.defs: Added properties for new class.
	* clutter/src/filelist.am: Added new classes to files_hg list.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
	* codegen/m4/convert_clutter.m4: Added enum conversion for Animator.

2011-01-20  Chris Kühl  <chrisk@openismus.com>

	Removed unnecessary C headers in .hg files.

	*clutter/src/actor-meta.hg:
	*clutter/src/actor.hg:
	*clutter/src/alpha.hg:
	*clutter/src/animation.hg:
	*clutter/src/container.hg:
	*clutter/src/interval.hg:
	*clutter/src/media.ccg:
	*clutter/src/path.[h|cc]g:
	*clutter/src/score.hg:
	*clutter/src/script.hg:
	*clutter/src/scriptable.[h|cc]g:
	*clutter/src/shader.[h|cc]g:
	*clutter/src/stage.hg:
	*clutter/src/texture.hg:

2011-01-20  Chris Kühl  <chrisk@openismus.com>

	Replaced use of unsigned int with guint.

	*clutter/src/actor.[cc|h]g:
	*clutter/src/box-layout.hg:
	*clutter/src/path.hg:
	*clutter/src/rectangle.hg:
	*clutter/src/text.hg:
	*clutter/src/types.[cc|h]g:

2011-01-19  Chris Kühl  <chrisk@openismus.com>

	Cleaned up include files in LayoutManager.
