@@ -33,6 +33,7 @@ files_hg =			\
 	clone.hg		\
 	color.hg		\
 	container.hg		\
+	device-manager.hg	\
 	effect.hg               \
 	fixed-layout.hg         \
 	flow-layout.hg          \
