@@ -1,3 +1,14 @@
+2011-01-24  Chris Kühl  <chrisk@openismus.com>
+
+	Initial wrapping of ClutterDeviceManager.
+
+	* clutter/cluttermm.h: Added header file for new class.
+	* clutter/src/device-manager.[hg|ccg]: Initial wrapping of ClutterDeviceManager.
+	* clutter/src/clutter_signals.defs: Added properties for new class.
+	* clutter/src/filelist.am: Added new class to files_hg list.
+	* codegen/extradefs/generate_extra_defs_clutter.cc: Added new class.
+	* codegen/m4/convert_clutter.m4: Added DeviceManager & InputDevice conversions.
+
 2011-01-22  Chris Kühl  <chrisk@openismus.com>
 
 	Initial wrapping of ClutterInputDevice.
